Bug 873450 - Implement IA2 containing relations, r=tbsaunde